<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_test_framework_examples</name>
  <version>0.1.0</version>
  <description>Examples of using test tools</description>
  <maintainer email="slawomir.cielepak@gmail.com">Sławomir Cielepak</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>

  <test_depend>ros2_test_framework</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
