<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtest_examples</name>
  <version>0.2.0</version>
  <description>Examples of using test tools</description>
  <maintainer email="slawomir.cielepak@gmail.com">Sławomir Cielepak</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_action</depend>
  <depend>rtest_examples_interfaces</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>

  <test_depend>rtest</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
