<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtest</name>
  <version>0.1.0</version>
  <description>This framework enables writing reliable, fully repeatable tests for C++ ROS 2 implementations.</description>
  <maintainer email="gc19@beam.global">Gary Cross</maintainer>
  <maintainer email="slawomir.cielepak@gmail.com">Sławomir Cielepak</maintainer>
  <maintainer email="mua@spyro-soft.com">Mariusz Szczepanik</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <build_depend>libboost-dev</build_depend>
  <build_depend>libgmock-dev</build_depend>
  <depend>gmock_vendor</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_clang_tidy</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc2>rosdoc2.yaml</rosdoc2>
    <quality_level_status content="LEVEL_4"/>
  </export>
</package>
