<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_tools_ros</name>
  <version>2.0.1</version>
  <description>ROS2-specific code to help with testing.</description>
  <maintainer email="gc19@beam.global">Gary Cross</maintainer>
  <maintainer email="sie@spyro-soft.com">Sławomir Cielepak</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>gmock_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
